--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section id="students">
     <h2>Students</h2>
-    <p>Short bios and photos of students will appear here.</p>
+    <p> Photos of students will appear here.</p>
   </section>
 
   <section id="alumni">
