--- a/index.html
+++ b/index.html
@@ -68,16 +68,38 @@
     </ul>
   </section>
 
-  <section id="students">
-    <h2>Students</h2>
-    <p> Photos of students will appear here.</p>
-  </section>
+ <section id="students">
+  <h2>Students</h2>
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/rhheaa-mehta-7b56a6251/" target="_blank">Rheaa Metha</a> – 4th Year at University of Pittsburgh
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/sai-ghatti-8950742a8/" target="_blank">Sai Ghatti</a> – 3rd Year at University of Pittsburgh
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/avni-khandel/" target="_blank">Avni Khandelwal</a> – 1st Year at University of Pittsburgh
+    </li>
+  </ul>
+</section>
 
   <section id="alumni">
-    <h2>Alumni</h2>
-    <p>Names and group photos of past lab members will be added here.</p>
-    <div class="alumni-photo-placeholder">[Add alumni group photos here later]</div>
-  </section>
+  <h2>Alumni</h2>
+  <ul>
+    <li><a href="https://www.researchgate.net/profile/Charlie-Nelson-5" target="_blank">Charlie Nelson</a> – Jackson Lab</li>
+    <li><a href="https://www.researchgate.net/profile/Darilang-Mawrie-2" target="_blank">Darilang Mawrie</a> – Former Pitt Post Doc</li>
+    <li><a href="https://www.researchgate.net/profile/Tyler-Fortuna" target="_blank">Tyler Fortuna</a> – National Institute of Health</li>
+    <li><a href="https://www.linkedin.com/in/caroline-ward-3035881b9/" target="_blank">Caroline Ward</a> – University of Pittsburgh</li>
+    <li><a href="https://www.linkedin.com/in/shreyaa-nagajothi-7160771b2/" target="_blank">Nagashreyaa Nagajothi</a> – 2nd Year Medical Student at NYU</li>
+    <li><a href="https://www.linkedin.com/in/om-chauhan-9277b6250/" target="_blank">Om Chauhan</a> – University of Pittsburgh</li>
+    <li><a href="https://www.linkedin.com/in/aditi-luitel-b92b0230b/" target="_blank">Aditi Luitel</a> – 1st Year PhD at University of Pittsburgh</li>
+    <li><a href="https://www.linkedin.com/in/rowan-cassidy-55118b214/" target="_blank">Rowan Cassidy</a> – 4th Year at Johns Hopkins University</li>
+    <li><a href="https://www.linkedin.com/in/alexandra-kramer-a34101345/" target="_blank">Alexandra Kramer</a> – 2nd Year at Cornell University</li>
+    <li><a href="https://www.linkedin.com/in/shreya-george-63b5a3307/" target="_blank">Shreya George</a> – University of Pittsburgh Alumni</li>
+  </ul>
+
+  <div class="alumni-photo-placeholder">[Add alumni group photos here later]</div>
+</section>
 
   <section id="publications">
     <h2>Publications</h2>
