--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <nav>
     <div class="logo">The Pandey Lab</div>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
       <li><a href="#research">Research</a></li>
@@ -28,6 +29,7 @@
     <p>
       Professor of Pediatrics (Primary) and Human Genetics (Secondary)<br/>
       Director, Children’s Neuroscience Institute<br/>
+      UPMC Children's Hospital, Rangos Building, 7th Floor
     </p>
     <h3>Education & Training</h3>
     <ul>
@@ -63,41 +65,36 @@
       <li>Christopher Zammerilla</li>
       <li>Carter White</li>
       <li>Sheryl Rodriguez</li>
+      <li>Shreya George</li>
+      <li>Rhheaa Metha</li>
     </ul>
   </section>
 
- <section id="students">
-  <h2>Students</h2>
-  <ul>
-    <li>
-      <a href="https://www.linkedin.com/in/rhheaa-mehta-7b56a6251/" target="_blank">Rheaa Metha</a> – 4th Year at University of Pittsburgh
-    </li>
-    <li>
-      <a href="https://www.linkedin.com/in/sai-ghatti-8950742a8/" target="_blank">Sai Ghatti</a> – 3rd Year at University of Pittsburgh
-    </li>
-    <li>
-      <a href="https://www.linkedin.com/in/avni-khandel/" target="_blank">Avni Khandelwal</a> – 1st Year at University of Pittsburgh
-    </li>
-  </ul>
-</section>
+  <section id="students">
+    <h2>Students</h2>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/rhheaa-mehta-7b56a6251/" target="_blank">Rheaa Metha</a> – 4th Year at University of Pittsburgh</li>
+      <li><a href="https://www.linkedin.com/in/sai-ghatti-8950742a8/" target="_blank">Sai Ghatti</a> – 3rd Year at University of Pittsburgh</li>
+      <li><a href="https://www.linkedin.com/in/avni-khandel/" target="_blank">Avni Khandelwal</a> – 1st Year at University of Pittsburgh</li>
+    </ul>
+  </section>
 
   <section id="alumni">
-  <h2>Alumni</h2>
-  <ul>
-    <li><a href="https://www.researchgate.net/profile/Charlie-Nelson-5" target="_blank">Charlie Nelson</a> – Jackson Lab</li>
-    <li><a href="https://www.researchgate.net/profile/Darilang-Mawrie-2" target="_blank">Darilang Mawrie</a> – Former Pitt Post Doc</li>
-    <li><a href="https://www.researchgate.net/profile/Tyler-Fortuna" target="_blank">Tyler Fortuna</a> – National Institute of Health</li>
-    <li><a href="https://www.linkedin.com/in/caroline-ward-3035881b9/" target="_blank">Caroline Ward</a> – University of Pittsburgh</li>
-    <li><a href="https://www.linkedin.com/in/shreyaa-nagajothi-7160771b2/" target="_blank">Nagashreyaa Nagajothi</a> – 2nd Year Medical Student at NYU</li>
-    <li><a href="https://www.linkedin.com/in/om-chauhan-9277b6250/" target="_blank">Om Chauhan</a> – University of Pittsburgh</li>
-    <li><a href="https://www.linkedin.com/in/aditi-luitel-b92b0230b/" target="_blank">Aditi Luitel</a> – 1st Year PhD at University of Pittsburgh</li>
-    <li><a href="https://www.linkedin.com/in/rowan-cassidy-55118b214/" target="_blank">Rowan Cassidy</a> – 4th Year at Johns Hopkins University</li>
-    <li><a href="https://www.linkedin.com/in/alexandra-kramer-a34101345/" target="_blank">Alexandra Kramer</a> – 2nd Year at Cornell University</li>
-    <li><a href="https://www.linkedin.com/in/shreya-george-63b5a3307/" target="_blank">Shreya George</a> – University of Pittsburgh Alumni</li>
-  </ul>
-
-  <div class="alumni-photo-placeholder">[Add alumni group photos here later]</div>
-</section>
+    <h2>Alumni</h2>
+    <ul>
+      <li><a href="https://www.researchgate.net/profile/Charlie-Nelson-5" target="_blank">Charlie Nelson</a> – Jackson Lab</li>
+      <li><a href="https://www.researchgate.net/profile/Darilang-Mawrie-2" target="_blank">Darilang Mawrie</a> – Former Pitt Post Doc</li>
+      <li><a href="https://www.researchgate.net/profile/Tyler-Fortuna" target="_blank">Tyler Fortuna</a> – National Institute of Health</li>
+      <li><a href="https://www.linkedin.com/in/caroline-ward-3035881b9/" target="_blank">Caroline Ward</a> – University of Pittsburgh</li>
+      <li><a href="https://www.linkedin.com/in/shreyaa-nagajothi-7160771b2/" target="_blank">Nagashreyaa Nagajothi</a> – 2nd Year Medical Student at NYU</li>
+      <li><a href="https://www.linkedin.com/in/om-chauhan-9277b6250/" target="_blank">Om Chauhan</a> – University of Pittsburgh</li>
+      <li><a href="https://www.linkedin.com/in/aditi-luitel-b92b0230b/" target="_blank">Aditi Luitel</a> – 1st Year PhD at University of Pittsburgh</li>
+      <li><a href="https://www.linkedin.com/in/rowan-cassidy-55118b214/" target="_blank">Rowan Cassidy</a> – 4th Year at Johns Hopkins University</li>
+      <li><a href="https://www.linkedin.com/in/alexandra-kramer-a34101345/" target="_blank">Alexandra Kramer</a> – 2nd Year at Cornell University</li>
+      <li><a href="https://www.linkedin.com/in/shreya-george-63b5a3307/" target="_blank">Shreya George</a> – University of Pittsburgh Alumni</li>
+    </ul>
+    <div class="alumni-photo-placeholder">[Add alumni group photos here later]</div>
+  </section>
 
   <section id="publications">
     <h2>Publications</h2>
@@ -122,6 +119,14 @@
   <footer>
     <p>© 2025 Pandey Lab | University of Pittsburgh</p>
   </footer>
+
+  <script>
+    const toggle = document.querySelector('.menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
+    toggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
