--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
     <div class="alumni-photo-placeholder">[Add alumni group photos here later]</div>
   </section>
 
-  <section id="publications">
-    <h2>Publications</h2>
-    <p><a href="https://scholar.google.com/citations?user=LsnhAzwAAAAJ&hl=en" target="_blank">View publications on Google Scholar</a></p>
-  </section>
+ <section id="publications">
+  <h2>Publications</h2>
+  <p><a href="https://pubmed.ncbi.nlm.nih.gov/?term=pandey+ub" target="_blank">View publications on PubMed</a></p>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
