--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
   </section>
 
   <footer>
-    <p>© 2025 Pandey Lab | University of Pittsburgh</p>
-  </footer>
+  <p>© 2025 Pandey Lab | University of Pittsburgh</p>
+  <p class="site-credit">This website was made and maintained by Samanyu Pandey.</p>
+</footer>
+
 
   <script>
     const toggle = document.querySelector('.menu-toggle');
