--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <footer>
   <p>© 2025 Pandey Lab | University of Pittsburgh</p>
-  <p class="site-credit">This website was made and maintained by Samanyu Pandey.</p>
+  <p class="site-credit">This website was made and is maintained by Samanyu Pandey.</p>
 </footer>
 
 
